--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "path-to-regexp": "^8.1.0",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0"
   }
