--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "supertest": "^7.0.0"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "path-to-regexp": "^8.1.0",
