--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mustache-express": "^1.3.2",
     "path-to-regexp": "^8.1.0",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0"
